2006-01-07  Andrew Cagney  <cagney@redhat.com>

	* cni/Exe.cxx: New.
	* Exe.java: New.

2006-01-06  Andrew Cagney  <cagney@redhat.com>

	* CmdLineBuilder.java (construct): Make abstract.
	* cni/CmdLineBuilder.cxx: New file.
	* TestCmdLine.java: Implement, test {}, {""}, {"a"}, {"",""},
	{"a",""}, {"","b"}, {"a","b"}, {"a","b","c"}.

2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* TestCmdLine.java: New file.
	* CmdLineBuilder.java: New file.

2005-11-02  Andrew Cagney  <cagney@redhat.com>

	* cni/MapsBuilder.cxx (construct): Implement.
	* TestMaps.java: Add .stringsToBytes, .Map, .check, .testIA32,
	.testIA64, .testAMD64, .testPPC32, and .testPPC64.
	* MapsBuilder.java: Add .buildBuffer.  Fix parameters to
	.buildMap.

	* cni/slurp.hxx (scanJint, scanJlong): Declare.
	* cni/slurp.cxx (scanJint, scanJlong): New.
	* cni/Stat.cxx (scanJint, scanJlong): Delete.
	(refresh): Make p const.

	* cni/AuxvBuilder.cxx (construct): Call.
	* AuxvBuilder.java: Add .buildDimensions.
	* TestAuxv.java: Add .buildDimensions to Builder.

2005-10-31  Andrew Cagney  <cagney@redhat.com>

	* cni/MapsBuilder.cxx, MapsBuilder.java, TestMaps.java: New.

	* TestAuxv.java: New.
	* cni/AuxvBuilder.cxx (get): New.
	(get32b, get32l, get64b, get64l): Replace get32, and get64.
	(verify): Drop wordSize parameter, use get for wordSize.
	(construct): Use a table to select the correct byte reader.
	* AuxvBuilder.java: Add bigEndian to .buildBuffer.

	* cni/slurp.hxx: Declare jbyteArray slurp(int,const char*)
	* cni/slurp.cxx: Implement.
	* cni/AuxvBuilder.cxx (construct): New, use jbyteArray slurp
	function.
	* AuxvBuilder.java: Add construct(byte[]), replace
	.buildDimensions with .buildBuffer.
	
2005-10-30  Andrew Cagney  <cagney@redhat.com>

	* AuxvBuilder.java: Rename AuxiliaryVectorBuilder.java.
	* IdBuilder.java: Rename ScanDir.java.
	* cni/AuxvBuilder.cxx: Rename cni/AuxiliaryVectorBuilder.cxx.
	* cni/IdBuilder.cxx: Rename cni/ScanDir.cxx.

	* cni/AuxiliaryVectorBuilder.cxx: 